chore: address sonar